添加工具封装类

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,6 @@
 name: flutterkeepgoing
 description: A new Flutter project.
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
 
 environment:
@@ -20,9 +10,19 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  # 事件总线  https://pub.dev/packages/event_bus
+  event_bus: ^1.1.0
+  # 数据存储 https://pub.dev/packages/shared_preferences
+  shared_preferences: ^0.5.3+4
+  # 加密散列函数 https://pub.dev/packages/crypto
+  crypto: ^2.0.6
+  # 网络请求 https://pub.dev/packages/dio
+  dio: ^2.1.0
+  # Image 扩展组件 https://pub.dev/packages/extended_image
+  extended_image: ^0.5.5
+  # 路由框架 https://github.com/theyakka/fluro
+  fluro: ^1.5.1
 
 dev_dependencies:
   flutter_test:
