--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,14 @@ dependencies:
   extended_image: ^0.5.5
   # 路由框架 https://github.com/theyakka/fluro
   fluro: ^1.5.1
+  # WebView插件 https://github.com/flutter/plugins/tree/master/packages/webview_flutter
+  webview_flutter: 0.3.10+4
+  # toast 插件 https://pub.dev/packages/oktoast#-readme-tab-
+  oktoast: ^2.2.0
+  # Dart 常用工具类库 https://github.com/Sky24n/common_utils
+  common_utils: ^1.1.3
+  # Flutter 常用工具类库 https://github.com/Sky24n/flustars
+  flustars: 0.2.6+1
 
 dev_dependencies:
   flutter_test:
