--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   dio: ^2.1.0
   # Image 扩展组件 https://pub.dev/packages/extended_image
   extended_image: ^0.5.5
+  # 图片缓存 https://github.com/renefloor/flutter_cached_network_image
+  cached_network_image: ^1.1.1
   # 路由框架 https://github.com/theyakka/fluro
   fluro: ^1.5.1
   # WebView插件 https://github.com/flutter/plugins/tree/master/packages/webview_flutter
@@ -31,6 +33,14 @@ dependencies:
   common_utils: ^1.1.3
   # Flutter 常用工具类库 https://github.com/Sky24n/flustars
   flustars: 0.2.6+1
+  # RxDart是基于ReactiveX的Google Dart反应式函数式编程库 https://github.com/ReactiveX/rxdart
+  rxdart: ^0.22.1+1
+  # Flutter 轮播图 https://github.com/best-flutter/flutter_swiper
+  flutter_swiper: ^1.1.6
+  # 启动URL的插件 https://github.com/flutter/plugins/tree/master/packages/url_launcher
+  url_launcher: 5.1.2
+  # 处理键盘事件 https://github.com/diegoveloper/flutter_keyboard_actions
+  keyboard_actions: ^2.1.1+1
 
 dev_dependencies:
   flutter_test:
@@ -49,9 +59,16 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/images/home/
+    - assets/images/home/2.0x/
+    - assets/images/mycourise/
+    - assets/images/mycourise/2.0x/
+    - assets/images/mine/
+    - assets/images/mine/2.0x/
+
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
