--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,21 +41,17 @@ dependencies:
   url_launcher: 5.1.2
   # 处理键盘事件 https://github.com/diegoveloper/flutter_keyboard_actions
   keyboard_actions: ^2.1.1+1
+  loading: ^1.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+  
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
