--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   image_picker_saver: ^0.3.0
   # 图片裁切 https://pub.dev/packages/image_cropper#-installing-tab-
   image_cropper: ^1.0.2
+  # 视频播放 https://pub.dev/packages/chewie
+  chewie: ^0.9.7
 
 
 dev_dependencies:
